[gd_scene load_steps=5 format=3 uid="uid://dim22dedbcv2q"]

[ext_resource type="Script" uid="uid://cmdd1bx7sn1y0" path="res://scripts/multiplayer/MPSurvivor/survivor.gd" id="1_7dcj0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gyrm0"]
radius = 25.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_jt1yj"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:velocity")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:health")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:can_move")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0mlg0"]
bg_color = Color(0.929412, 0.235294, 0.25098, 1)

[node name="Survivor" type="CharacterBody2D" groups=["survivor"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_7dcj0")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
color = Color(0.188235, 0.698039, 0.921569, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gyrm0")

[node name="Camera2D" type="Camera2D" parent="."]
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_jt1yj")

[node name="Label" type="Label" parent="."]
offset_left = -58.0
offset_top = -48.0
offset_right = 58.0
offset_bottom = -25.0
text = "幸存者"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -30.0
offset_top = 30.0
offset_right = 30.0
offset_bottom = 40.0
theme_override_styles/fill = SubResource("StyleBoxFlat_0mlg0")
max_value = 50.0
value = 50.0
show_percentage = false

[connection signal="health_changed" from="." to="." method="_on_health_changed"]
